--- a/personal-portfolio/package.json
+++ b/personal-portfolio/package.json
@@ -2,6 +2,7 @@
   "name": "personal-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://alyfahmad.github.io/Personal-portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +11,7 @@
     "bootstrap": "^5.2.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "gh-pages": "^4.0.0",
     "nodemailer": "^6.8.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -23,6 +25,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
