--- a/personal-portfolio/package.json
+++ b/personal-portfolio/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://alyfahmad.github.io/personal-portfolio",
   "name": "personal-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "g": "^2.0.1",
+    "gh-pages": "^4.0.0",
     "nodemailer": "^6.8.0",
     "npm": "^8.19.2",
     "react": "^18.2.0",
@@ -26,6 +28,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeply": "npm run build",
+    "deply": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
