changed homepage address

--- a/personal-portfolio/package.json
+++ b/personal-portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://alyfahmad.github.io/personal_portfolio",
+  "homepage": "https://alifahmad.com",
   "name": "personal-portfolio",
   "version": "0.1.0",
   "private": true,
